Fix du registration/loggin invisibles

--- a/app/assets/stylesheets/components/_form_legend_clear.scss
+++ b/app/assets/stylesheets/components/_form_legend_clear.scss
@@ -5,6 +5,22 @@
 // input and has no visual effect. Here we try to fix matters by
 // applying the clear to the div wrapping the first following radio button
 // or checkbox.
-legend ~ div.form-check:first-of-type {
+legend~div.form-check:first-of-type {
   clear: left;
+}
+
+#new-reg {
+  color: black;
+
+  input {
+    color: black;
+  }
+}
+
+#new-session {
+  color: black;
+
+  input {
+    color: black;
+  }
 }
